my commit message

--- a/Bootcamp/src/app/academy/academy.component.html
+++ b/Bootcamp/src/app/academy/academy.component.html
@@ -170,8 +170,8 @@
         <td>{{ data.CreatedOn }}</td>
         <td>{{ data.AcademyName }}</td>
         <td>{{ data.AcademyWebsite }}</td>
-        <td><img src="../../assets/{{data.AcademyLogo}}" height="50px" width="50px" alt="Loading...">
-          {{data.AcademyLogo}}
+        <td><img src="{{data.TempLogo}}" height="50px" width="50px" alt="Loading...">
+          {{data.TempLogo}}
         </td>
         <!-- <td>{{ data.AcademyLogo }}</td> -->
         <td>{{ data.AcademyFounded }}</td>
