my commit message

--- a/Bootcamp/src/app/user/user.component.html
+++ b/Bootcamp/src/app/user/user.component.html
@@ -21,7 +21,7 @@
 
 <div class="col-md-12">
   <h2  style="text-align:center;" id="f3">Rights List</h2>
-  <small> <input type="checkbox" (change)="checkAll()"> <b> Checked All </b> </small>
+  <small> <input type="checkbox" (change)="checkAll()"> <b> Check All </b> </small>
   <table class="table table-bordered ">
     <thead>
       <tr style="background-color: #12ACCF!important;">
