--- a/Bootcamp/src/app/academy/academy.component.html
+++ b/Bootcamp/src/app/academy/academy.component.html
@@ -171,7 +171,7 @@
         <td>{{ data.AcademyWebsite }}</td>
         <!-- <td><img src="../../../../uploads/{{data.AcademyLogo}}" height="50px" width="50px" alt="Loading...">
         </td> -->
-        <td><img src="{{'uploads/' + data.AcademyLogo}}" height="50px" width="50px" alt="Loading...">
+        <td><img src="{{'../../assets/' + data.AcademyLogo}}" height="50px" width="50px" alt="Loading...">
         </td>
         <!-- <td>{{ data.AcademyLogo }}</td> -->
         <td>{{ data.AcademyFounded }}</td>
