my commit message

--- a/Bootcamp/src/app/course-details/course-details.component.html
+++ b/Bootcamp/src/app/course-details/course-details.component.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Courses, Workshops and Enterprise Training | BrainStation</title>
-<link rel="stylesheet" href="/Content/css/site.34e8d4f3561c25fd5affb3ed47eb7c21.css" />
-<link rel="apple-touch-icon" sizes="114x114" href="/Content/apple-touch-icon-114x114.png">
+<!-- <link rel="stylesheet" href="/Content/css/site.34e8d4f3561c25fd5affb3ed47eb7c21.css" /> -->
+<!-- <link rel="apple-touch-icon" sizes="114x114" href="/Content/apple-touch-icon-114x114.png">
 <link rel="apple-touch-icon" sizes="120x120" href="/Content/apple-touch-icon-120x120.png">
 <link rel="apple-touch-icon" sizes="144x144" href="/Content/apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/Content/apple-touch-icon-152x152.png">
@@ -41,7 +41,7 @@
 <meta name="twitter:description" content="BrainStation empowers individuals and businesses to achieve digital success through courses, workshops, and corporate training." />
 <meta name="google-site-verification" content="Y9X1vknT4pgkXRKxVNsjL7rb6hv76SqQLBEH_BrPLIA" />
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
@@ -217,7 +217,7 @@
 </li>
 <li class="bs-feature"  style="margin-bottom: -25px;">
 <div>
-<strong class="bs-feature__title bs-feature__title--small">AcademyLogo : </strong>   {{ academy?.AcademyLogo }}
+<strong class="bs-feature__title bs-feature__title--small">AcademyLogo : </strong>   <img src="{{'../../assets/'+ academy?.AcademyLogo }}" height="50px" width="50px">
 
 </div>
 </li>
